--- a/_includes/bio-education-2.html
+++ b/_includes/bio-education-2.html
@@ -17,8 +17,8 @@
         {% endfor %}
       </ul>
     {% endif %}
-
     {% if entry.ongoing_coursework %}
+      <p class="ui no-bottom"><b>Ongoing Coursework:</b></p>
       <ul style="margin: 0px;">
         {% for course in entry.ongoing_coursework %}
           <li>{{ course }}</li>
