--- a/_includes/bio-education-2.html
+++ b/_includes/bio-education-2.html
@@ -9,6 +9,9 @@
   <div class="twelve wide column no-bottom">
     <p class="ui no-bottom"><b>{{ entry.institution }}</b></p>
     <p class="ui no-bottom">{{ entry.studyType }}, {{ entry.area }}</p>
+    {% if entry.gpa %}
+      <p class="ui no-bottom"><i>{{ entry.gpa }}</i></p>
+    {% endif %}
     <p class="ui no-bottom"><b>Relevant Coursework:</b></p>
     {% if entry.relevant_coursework %}
       <ul style="margin: 0px;">
