--- a/_includes/theme-bio-builtin-1.html
+++ b/_includes/theme-bio-builtin-1.html
@@ -13,7 +13,7 @@
   </div>
 </div>
 
-<div style="margin-bottom: 20px" class="ui stackable grid container">
+<div style="margin-bottom: 20px; color: coral; text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;" class="ui stackable grid container">
   {% include bio-interests-1.html %}
   {% include bio-education-1.html %}
   {% include bio-certification-1.html %}
