--- a/_includes/theme-bio-builtin-1.html
+++ b/_includes/theme-bio-builtin-1.html
@@ -1,7 +1,7 @@
 <div style="margin-top: 10px; " class="ui stackable grid container">
 
   <div class="sixteen wide column no-bottom">
-    <h2 class="ui center aligned header no-bottom">{{ site.data.bio.basics.name }}</h2>
+    <h2 style="color: black; text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;" class="ui center aligned header no-bottom">{{ site.data.bio.basics.name }}</h2>
   </div>
 
   <div class="eight wide left aligned column">
