--- a/_includes/theme-bio-builtin-1.html
+++ b/_includes/theme-bio-builtin-1.html
@@ -4,11 +4,11 @@
     <h2 style="color: black; text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;" class="ui center aligned header no-bottom">{{ site.data.bio.basics.name }}</h2>
   </div>
 
-  <div class="eight wide left aligned column">
+  <div style="color: black; text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;" class="eight wide left aligned column">
     {% include bio-network-links.html %}
   </div>
 
-  <div class="eight wide right aligned column">
+  <div style="color: black; text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;" class="eight wide right aligned column">
     {% include bio-address.html %}
   </div>
 </div>
