--- a/_includes/theme-bio-builtin-1.html
+++ b/_includes/theme-bio-builtin-1.html
@@ -1,19 +1,19 @@
 <div style="margin-top: 10px; " class="ui stackable grid container">
 
   <div class="sixteen wide column no-bottom">
-    <h2 style="color: black; text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;" class="ui center aligned header no-bottom">{{ site.data.bio.basics.name }}</h2>
+    <h2 style="color: white; text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;" class="ui center aligned header no-bottom">{{ site.data.bio.basics.name }}</h2>
   </div>
 
-  <div style="color: black; text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;" class="eight wide left aligned column">
+  <div style="color: white; text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;" class="eight wide left aligned column">
     {% include bio-network-links.html %}
   </div>
 
-  <div style="color: black; text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;" class="eight wide right aligned column">
+  <div style="color: white; text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;" class="eight wide right aligned column">
     {% include bio-address.html %}
   </div>
 </div>
 
-<div style="margin-bottom: 20px; color: black; text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;" class="ui stackable grid container">
+<div style="margin-bottom: 20px; color: white; text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;" class="ui stackable grid container">
   {% include bio-interests-1.html %}
   {% include bio-education-1.html %}
   {% include bio-certification-1.html %}
