--- a/_includes/theme-bio-builtin-1.html
+++ b/_includes/theme-bio-builtin-1.html
@@ -5,7 +5,7 @@
   </div>
 
   <div style="color: black; text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;" class="eight wide left aligned column">
-    {% include bio-network-links.html %}
+    <div style="color: white;">{% include bio-network-links.html %}</div>
   </div>
 
   <div style="color: black; text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;" class="eight wide right aligned column">
