--- a/_includes/theme-bio-builtin-1.html
+++ b/_includes/theme-bio-builtin-1.html
@@ -13,7 +13,7 @@
   </div>
 </div>
 
-<div style="margin-bottom: 20px; color: black; text-shadow: -2px 0 white, 0 2px white, 2px 0 white, 0 -2px white;" class="ui stackable grid container">
+<div style="margin-bottom: 20px; color: black; text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white; font-size: 15px" class="ui stackable grid container">
   {% include bio-interests-1.html %}
   {% include bio-education-1.html %}
   {% include bio-certification-1.html %}
