--- a/_includes/bio-work-1.html
+++ b/_includes/bio-work-1.html
@@ -12,7 +12,7 @@
     <div class="ui grid">
       <div class="twelve wide column no-bottom">
         <p class="ui no-bottom"><b>{{ entry.position }}, {{ entry.company }}</b></p>
-        <p class="ui no-bottom"><a style="link-color: green;" href="{{ entry.website }}">{{ entry.website | remove: "http://" | remove: "https://"
+        <p class="ui no-bottom"><a style="link-color: green; hover-color: red;" href="{{ entry.website }}">{{ entry.website | remove: "http://" | remove: "https://"
           }}</a></p>
         <p class="ui no-bottom">{{ entry.summary }}</p>
         {% if entry.highlights %}
