--- a/_includes/theme-bio-builtin-1.html
+++ b/_includes/theme-bio-builtin-1.html
@@ -1,26 +1,28 @@
-<div style="margin-top: 10px; " class="ui stackable grid container">
+<div class = "ui fluid centered card">
+  <div style="margin-top: 10px; " class="ui stackable grid container">
 
-  <div class="sixteen wide column no-bottom">
-    <h2 style="color: black; text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;" class="ui center aligned header no-bottom">{{ site.data.bio.basics.name }}</h2>
+    <div class="sixteen wide column no-bottom">
+      <h2 style="color: black; text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;" class="ui center aligned header no-bottom">{{ site.data.bio.basics.name }}</h2>
+    </div>
+
+    <div style="color: black; text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;" class="eight wide left aligned column">
+      <div style="color: white;">{% include bio-network-links.html %}</div>
+    </div>
+
+    <div style="color: black; text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;" class="eight wide right aligned column">
+      {% include bio-address.html %}
+    </div>
   </div>
 
-  <div style="color: black; text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;" class="eight wide left aligned column">
-    <div style="color: white;">{% include bio-network-links.html %}</div>
+  <div style="margin-bottom: 20px; color: black; text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white; font-size: 15px" class="ui stackable grid container">
+    {% include bio-interests-1.html %}
+    {% include bio-education-1.html %}
+    {% include bio-certification-1.html %}
+    {% include bio-skills-1.html %}
+    {% include bio-work-1.html %}
+    {% include bio-volunteer-1.html %}
+    {% include bio-publications-1.html %}
+    {% include bio-awards-1.html %}
+    {% include bio-references-1.html %}
   </div>
-
-  <div style="color: black; text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;" class="eight wide right aligned column">
-    {% include bio-address.html %}
-  </div>
-</div>
-
-<div style="margin-bottom: 20px; color: black; text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white; font-size: 15px" class="ui stackable grid container">
-  {% include bio-interests-1.html %}
-  {% include bio-education-1.html %}
-  {% include bio-certification-1.html %}
-  {% include bio-skills-1.html %}
-  {% include bio-work-1.html %}
-  {% include bio-volunteer-1.html %}
-  {% include bio-publications-1.html %}
-  {% include bio-awards-1.html %}
-  {% include bio-references-1.html %}
 </div>
