--- a/_includes/theme-bio-builtin-1.html
+++ b/_includes/theme-bio-builtin-1.html
@@ -1,4 +1,4 @@
-<div style="max-width: 80%; padding-top: 75px; margin-top: 115px" class = "ui fluid centered card">
+<div style="max-width: 80%; padding-top: 45px; margin-top: 55px"; padding-bottom: 45px; margin-bottom: 55px"; class = "ui fluid centered card">
   <div style="margin-top: 10px; " class="ui stackable grid container">
 
     <div class="sixteen wide column no-bottom">
