--- a/_includes/bio-education-1.html
+++ b/_includes/bio-education-1.html
@@ -36,7 +36,7 @@
     <div class="four wide right aligned column no-bottom">
       <p class="ui no-bottom"><b>
         {% if entry.startDate %}
-        {{ entry.startDate | slice: 5,6 }} {{ entry.startDate | slice: 0,4 }}
+        {{ entry.startDate | slice: 5 }}{{ entry.startDate | slice: 6 }} {{ entry.startDate | slice: 0,4 }}
         {% endif %}
         {% if entry.startDate and entry.startDate != '' and entry.endDate and entry.endDate != '' %}
         -
