--- a/_includes/bio-education-1.html
+++ b/_includes/bio-education-1.html
@@ -1,5 +1,5 @@
 <!-- Used by theme-bio-builtin-1 -->
-
+<!-- In lines 39 and 46, could use {{ entry.startDate | slice: 5 }}{{ entry.startDate | slice: 6 }} -->
 
 <div class="row">
 <div class="two wide column">
