--- a/_includes/bio-certification-1.html
+++ b/_includes/bio-certification-1.html
@@ -27,7 +27,7 @@
       <div class="four wide right aligned column no-bottom">
         <p class="ui no-bottom"><b>
           {% if entry.startDate %}
-          {{ entry.startDate | slice: 0,4 }}
+          Aug {{ entry.startDate | slice: 0,4 }}
           {% endif %}
         </b></p>
       </div>
