--- a/_includes/bio-education-1.html
+++ b/_includes/bio-education-1.html
@@ -36,14 +36,14 @@
     <div class="four wide right aligned column no-bottom">
       <p class="ui no-bottom"><b>
         {% if entry.startDate %}
-        Aug {{ entry.startDate | slice: 0,4 }}
+        {{ entry.startDate | slice: 5 }}{{ entry.startDate | slice: 6 }}{{ entry.startDate | slice: 7 }} {{ entry.startDate | slice: 0,4 }}
         {% endif %}
         {% if entry.startDate and entry.startDate != '' and entry.endDate and entry.endDate != '' %}
         -
         {% endif %}
         {% if entry.endDate %}
           {% if entry.endDate != "Present" %}
-            Dec {{ entry.endDate | slice: 0,4 }}
+            {{ entry.endDate | slice: 5 }}{{ entry.endDate | slice: 6 }}{{ entry.endDate | slice: 7 }} {{ entry.endDate | slice: 0,4 }}
           {% else %}
             {{ entry.endDate }}
           {% endif %}
