--- a/_includes/theme-bio-builtin-2.html
+++ b/_includes/theme-bio-builtin-2.html
@@ -1,9 +1,14 @@
 <div style="margin-top: 10px; margin-bottom: 20px" class="ui stackable grid container">
 
   <div class="sixteen wide column no-bottom">
-    <h2 class="ui center aligned header no-bottom">{{ site.data.bio.basics.name }}</h2>
+    <h1 class="ui center aligned header no-bottom">{{ site.data.bio.basics.name }}</h1>
   </div>
-
+  
+  <div class="sixteen wide column no-bottom">
+    <h2 class="ui center aligned header no-bottom">
+      <a href={{ site.resume }} download = "Christian Kamarga Resume">You can download a .pdf file of this resume by clicking here.</a>
+    </h2>
+  </div>
   <div class="eight wide left aligned column">
     {% include bio-network-links.html %}
   </div>
