--- a/_includes/theme-bio-builtin-2.html
+++ b/_includes/theme-bio-builtin-2.html
@@ -6,7 +6,7 @@
   
   <div class="sixteen wide column no-bottom">
     <h2 class="ui center aligned header no-bottom">
-      <a href={{ site.resume }} download = "Christian Kamarga Resume">You can download a .pdf file of this resume by clicking here.</a>
+      <a href="https://github.com/ChrisMakesKode/ChrisMakesKode.github.io/blob/master/resume/Christian%20Kamarga%20Resume%20Feb%202024.pdf" download = "Christian Kamarga Resume">You can download a .pdf file of this resume by clicking here.</a>
     </h2>
   </div>
   <div class="eight wide left aligned column">
