--- a/_includes/theme-bio-builtin-1.html
+++ b/_includes/theme-bio-builtin-1.html
@@ -5,9 +5,11 @@
       <h2 style="color: black; text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;" class="ui center aligned header no-bottom">{{ site.data.bio.basics.name }}</h2>
     </div>
     
-    <div class="eight wide column no-bottom">
+    <div class="sixteen wide column no-bottom">
       <h2 class="ui center aligned header no-bottom">
-        <a href="https://github.com/ChrisMakesKode/ChrisMakesKode.github.io/blob/master/resume/Christian%20Kamarga%20Resume%20Feb%202024.pdf" download = "Christian Kamarga Resume.pdf">You can download a .pdf file of this resume by clicking here.</a>
+        <a href="https://github.com/ChrisMakesKode/ChrisMakesKode.github.io/blob/master/resume/Christian%20Kamarga%20Resume%20Feb%202024.pdf" download = "Christian Kamarga Resume.pdf">
+          You can download a .pdf file of this resume by clicking here.
+        </a>
       </h2>
     </div>
     
