--- a/_includes/theme-bio-builtin-1.html
+++ b/_includes/theme-bio-builtin-1.html
@@ -7,7 +7,7 @@
     
     <div class="sixteen wide column no-bottom">
       <h2 class="ui center aligned header no-bottom">
-        <a href="https://github.com/ChrisMakesKode/ChrisMakesKode.github.io/blob/master/resume/Christian%20Kamarga%20Resume%20Feb%202024.pdf" download = "Christian Kamarga Resume.pdf">
+        <a href={{ site.resume.resume }} download = "Christian Kamarga Resume.pdf">
           You can download a .pdf file of this resume by clicking here.
         </a>
       </h2>
