--- a/_includes/theme-bio-builtin-1.html
+++ b/_includes/theme-bio-builtin-1.html
@@ -7,7 +7,7 @@
     
     <div class="sixteen wide column no-bottom">
       <h2 class="ui center aligned header no-bottom">
-        <a href= "https://github.com/ChrisMakesKode/ChrisMakesKode.github.io/blob/b838a35936347cea4d4a40a254851aec2456b5b2/resume/resume.pdf" download = "Christian Kamarga Resume.pdf">
+        <a href= {{ site.resume }} download = "Christian Kamarga Resume.pdf">
           You can download a .pdf file of this resume by clicking here.
         </a>
       </h2>
