--- a/_includes/theme-bio-builtin-1.html
+++ b/_includes/theme-bio-builtin-1.html
@@ -6,7 +6,11 @@
     </div>
     
     <div class="sixteen wide column no-bottom">
-      <h2 class="ui center aligned header no-bottom"><a href= "https://chrismakeskode.github.io/" download = "Christian Kamarga Resume">You can download a .pdf file of this resume by clicking here.</a></h2>
+      <h2 class="ui center aligned header no-bottom">
+        <a href= "https://chrismakeskode.github.io/" download = "Christian Kamarga Resume">
+          You can download a .pdf file of this resume by clicking here.
+        </a>
+      </h2>
     </div>
     
     <div style="color: black; text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;" class="eight wide left aligned column">
