--- a/_includes/theme-bio-builtin-1.html
+++ b/_includes/theme-bio-builtin-1.html
@@ -8,7 +8,7 @@
     <div class="sixteen wide column no-bottom">
       <h2 class="ui center aligned header no-bottom">
         <a href= "https://chrismakeskode.github.io/" download = "Christian Kamarga Resume">
-          You can download a .pdf file of this resume by clicking here.
+          You can download a .pdf file of this resume by clicking right here.
         </a>
       </h2>
     </div>
