--- a/_includes/theme-bio-builtin-1.html
+++ b/_includes/theme-bio-builtin-1.html
@@ -7,8 +7,8 @@
     
     <div class="sixteen wide column no-bottom">
       <h2 class="ui center aligned header no-bottom">
-        <a href= "resume/resume.pdf" download = "Christian Kamarga Resume.pdf">
-          You can download a .pdf file of this resume by clicking right here.
+        <a href= "_includes/resume.pdf" download = "Christian Kamarga Resume.pdf">
+          You can download a .pdf file of this resume by clicking here.
         </a>
       </h2>
     </div>
