--- a/_includes/theme-bio-builtin-1.html
+++ b/_includes/theme-bio-builtin-1.html
@@ -7,7 +7,7 @@
     
     <div class="sixteen wide column no-bottom">
       <h2 class="ui center aligned header no-bottom">
-        <a href= "_includes/resume.pdf" download = "Christian Kamarga Resume.pdf">
+        <a href= "https://github.com/ChrisMakesKode/ChrisMakesKode.github.io/blob/e5725638bd0d5054a19c293b2fc60e04678fee01/resume/resume.pdf"download = "Christian Kamarga Resume.pdf">
           You can download a .pdf file of this resume by clicking here.
         </a>
       </h2>
